# starlight

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  imgui.ini
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: imgui.ini
src/: main.cpp
src/core/: camera.cpp  camera.hpp
src/gfx/: shader.cpp  shader.hpp  texture.cpp  texture.hpp
